# sip2rtsp

./: AUTHORS  ChangeLog  FEATURES  Makefile.in  NEWS  README  TODO  autogen.sh  config.h  config.h.in  config.status  configure  configure.ac
doc/: ims2rtsp.cfg  s2r-ims.cfg  s2r-sip.cfg  sip2rtsp.cfg  sip2rtsp.pcap
src/: Makefile.am  Makefile.in  cfg.c  cfg.h  core.c  core.h  log.c  log.h  main.c  rtpproxy.c  rtpproxy.h  rtsp.c  rtsp.h  rtsp_auth.c  rtsp_auth.h  rtsp_client.c  rtsp_client.h  rtsp_comm.c  rtsp_command.c  rtsp_private.h  rtsp_resp.c  rtsp_util.c  sdp.h  sdp_decode.c  sdp_decode_private.h  sdp_error.h  sdp_util.c  sip.c  sip.h  transport_parse.c  transport_parse.h
