bin_PROGRAMS=sip2rtsp
sip2rtsp_SOURCES=main.c core.c rtpproxy.c rtsp.c log.c cfg.c rtsp_auth.c rtsp_client.c rtsp_comm.c rtsp_command.c rtsp_resp.c \
  rtsp_util.c sdp_decode.c sdp_util.c sip.c transport_parse.c \
  rtsp.h rtsp_auth.h rtsp_client.h rtsp_private.h sdp.h  rtpproxy.h \
  sdp_decode_private.h sdp_error.h sip.h transport_parse.h
sip2rtsp_LDADD=-leXosip2 -losip2 -losipparser2
#sip2rtsp_CPPFLAGS=

